tests/overload-ty-mismatch/out.txt
error: mismatched types: expected one of int, word, real, found bool
  ┌─ err.sml:1:10
  │
1 │ val  _ = false + true
  │          ^^^^^^^^^^^^

typechecking failed
